--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,8 @@ html {
     --Palette2: #DE7254;
     --Palette3: #2FC6A8;
     --Palette4: #AE1E4E;
-    --Palette5: #011638;
+    --Palette5: #e9b171;
+    --Palette6: #011638;
 }
 
 body {
@@ -45,7 +46,7 @@ nav {
 .logo {
     margin: 2rem;
     color: var(--Palette1);
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 
 .logo h1 {
@@ -176,6 +177,8 @@ nav {
 .intro-text {
     margin-top: 35vh;
     padding: .5rem;
+    font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    font-weight: 350;
 }
 
 #icosaTEST {
@@ -384,11 +387,11 @@ nav {
 }
 
 .triangle-portal {
-    -webkit-backface-visibility: hidden;
+    /* -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     display: block;
     -webkit-transform: rotateY(80deg);
-    transform: rotateY(80deg);
+    transform: rotateY(80deg); */
     /* -webkit-animation: spin 2s forwards infinite linear; */
     /* animation: spin 21s forwards infinite linear; */
     /* -webkit-transform-origin: center 62%; */
@@ -396,7 +399,7 @@ nav {
     /* -webkit-transform-box: fill-box; */
     /* transform-box: fill-box; */
     stroke-width: 25px;
-    stroke: var(--Palette4);
+    stroke: var(--Palette3);
     width: 100%;
 }
 
@@ -408,7 +411,7 @@ nav {
 }
 
 .socials-svg {
-    fill: var(--Palette1);
+    fill: var(--Palette5);
     /* animation: hover 1.3s forwards infinite ease-in-out; */
 }
 
@@ -430,20 +433,22 @@ nav {
 
 .about-text1 {
     font-family: open sans;
-    font-weight: 300;
     font-style: italic;
     font-size: 1.4rem;
-    line-height: 2rem;
+    line-height: 1.9rem;
     margin: 1.5rem;
 }
 
-.about-text2, .about-text3 {
-    color: var(--Palette1);
+.about-text2, 
+.about-text3,
+.about-text4 {
+    font-family: open sans, sans serif;
+    font-size: .9rem;
 }
 
-.about-text4 {
-    font-weight: 200;
-    font-family: open sans, sans serif;
+.about-text2, 
+.about-text3 {
+    color: var(--Palette5);
 }
 
 footer {
