--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,14 +393,14 @@ nav {
     -webkit-transform: rotateY(80deg);
     transform: rotateY(80deg); */
     /* -webkit-animation: spin 2s forwards infinite linear; */
-    /* animation: spin 21s forwards infinite linear; */
+    animation: spin 3s forwards infinite linear;
     /* -webkit-transform-origin: center 62%; */
-    /* transform-origin: center 62%; */
+    transform-origin: center 62%;
     /* -webkit-transform-box: fill-box; */
-    /* transform-box: fill-box; */
+    transform-box: fill-box;
     stroke-width: 25px;
     stroke: var(--Palette3);
-    width: 100%;
+    width: 70%;
 }
 
 @keyframes spin {
