--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,7 +339,7 @@ nav {
     left: 15%;
     top: 40%;
     width: 7vh;
-    /* animation: hover 1.6s forwards infinite ease-in-out; */
+    animation: hover 1.6s forwards infinite ease-in-out;
 }
 
 #icosa1 {
@@ -347,7 +347,7 @@ nav {
     left: 28%;
     top: 20%;
     width: 4vh;
-    /* animation: hover 1.2s forwards infinite ease-in-out; */
+    animation: hover 1.2s forwards infinite ease-in-out;
     z-index: -1;
 }
 
@@ -357,7 +357,7 @@ nav {
     top: 69%;
     width: 3vh;
     /* transform: rotateZ(-5deg); */
-    /* animation: hover 1.3s forwards infinite ease-in-out; */
+    animation: hover 1.3s forwards infinite ease-in-out;
     z-index: -1;
 }
 
@@ -367,7 +367,7 @@ nav {
     top: 42%;
     width: 3.3vh;
     /* transform: rotateZ(5deg); */
-    /* animation: hover 1.4s forwards infinite ease-in-out; */
+    animation: hover 1.4s forwards infinite ease-in-out;
 }
 
 #linkedin-svg {
@@ -375,7 +375,7 @@ nav {
     left: 55%;
     top:57%;
     width: 8vh;
-    /* animation: hover 1.7s forwards infinite ease-in-out; */
+    animation: hover 1.7s forwards infinite ease-in-out;
 }
 
 #spotify-svg {
@@ -383,7 +383,7 @@ nav {
     left: 72%;
     top: 25%;
     width: 4.5vh;
-    /* animation: hover 1.3s forwards infinite ease-in-out; */
+    animation: hover 1.3s forwards infinite ease-in-out;
 }
 
 .triangle-portal {
@@ -399,7 +399,7 @@ nav {
     /* -webkit-transform-box: fill-box; */
     transform-box: fill-box;
     stroke-width: 25px;
-    stroke: var(--Palette3);
+    stroke: var(--Palette2);
     width: 70%;
 }
 
