--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,19 +391,22 @@ nav {
     /* backface-visibility: hidden; */
     /* display: block; */
     /* -webkit-transform: rotateY(80deg); */
-    transform: rotateX(80deg);
+    /* transform: rotateX(80deg); */
     /* -webkit-animation: spin 2s forwards infinite linear; */
     animation: spin 3s forwards infinite linear;
     /* -webkit-transform-origin: center 62%; */
     transform-origin: center 62%;
     /* -webkit-transform-box: fill-box; */
     transform-box: fill-box;
-    stroke-width: 25px;
-    stroke: var(--Palette2);
-    width: 70%;
+    stroke-width: 30px;
+    stroke: var(--Palette4);
+    width: 100%;
 }
 
 @keyframes spin {
+    from {
+        transform: rotateX(80deg);
+    }
     to {
         -webkit-transform: rotateX(80deg) rotateZ(360deg);
         transform: rotateX(80deg) rotateZ(360deg);
