--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,7 +391,7 @@ nav {
     /* backface-visibility: hidden; */
     /* display: block; */
     /* -webkit-transform: rotateY(80deg); */
-    transform: rotateX(80deg);
+    /* transform: rotateX(80deg); */
     /* -webkit-animation: spin 2s forwards infinite linear; */
     animation: spin 3s forwards infinite linear;
     /* -webkit-transform-origin: center 62%; */
@@ -399,7 +399,7 @@ nav {
     /* -webkit-transform-box: fill-box; */
     transform-box: fill-box;
     stroke-width: 30px;
-    stroke: var(--Palette4);
+    stroke: var(--Palette3);
     width: 100%;
 }
 
