--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,14 +399,14 @@ nav {
     /* -webkit-transform-box: fill-box; */
     transform-box: fill-box;
     stroke-width: 30px;
-    stroke: var(--Palette3);
+    stroke: var(--Palette4);
     width: 100%;
 }
 
 @keyframes spin {
-    /* from {
-        transform: rotateX(80deg);
-    } */
+    from {
+        transform: rotateX(10deg);
+    }
     to {
         -webkit-transform: rotateX(85deg) rotateZ(360deg);
         transform: rotateX(85deg) rotateZ(360deg);
