perspective on parent, rotate on portal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,6 +386,10 @@ nav {
     animation: hover 1.3s forwards infinite ease-in-out;
 }
 
+.portal-parent {
+    transform: rotateX(80deg);
+}
+
 .triangle-portal {
     /* -webkit-backface-visibility: hidden; */
     /* backface-visibility: hidden; */
@@ -393,7 +397,7 @@ nav {
     /* -webkit-transform: rotateY(80deg); */
     /* transform: rotateX(80deg); */
     /* -webkit-animation: spin 2s forwards infinite linear; */
-    animation: spin 3s forwards infinite linear;
+    animation: spin 2s forwards infinite linear;
     /* -webkit-transform-origin: center 62%; */
     transform-origin: center 62%;
     /* -webkit-transform-box: fill-box; */
@@ -403,13 +407,19 @@ nav {
     width: 100%;
 }
 
-@keyframes spin {
+@keyframes perspective {
     from {
         transform: rotateX(10deg);
     }
     to {
-        -webkit-transform: rotateX(85deg) rotateZ(360deg);
-        transform: rotateX(85deg) rotateZ(360deg);
+        transform: rotateX(85deg);
+    }
+}
+
+@keyframes spin {
+    to {
+        /* -webkit-transform: rotateX(85deg) rotateZ(360deg); */
+        transform: rotateZ(360deg);
     }
 }
 
