--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,7 +387,11 @@ nav {
 }
 
 .portal-parent {
-    transform: rotateX(80deg);
+    transform: translateY(50%) translateX(-50%) rotateX(80deg);
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 100%;
 }
 
 .triangle-portal {
