--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,12 +297,13 @@ nav {
     position: relative;
     /* min-height: 100vh; */
     max-width: 50vh;
+    /* margin-bottom: 30px; */
 }
 
 .tay-img-box {
-    width: 30vh;
+    width: 25vh;
     margin: 0 auto;
-    animation: hover 1.5s forwards infinite ease-in-out;
+    /* animation: hover 1.5s forwards infinite ease-in-out; */
 }
 
 @keyframes hover {
@@ -336,10 +337,10 @@ nav {
 
 #github-svg {
     position: absolute;
-    left: 15%;
+    left: 17%;
     top: 40%;
-    width: 7vh;
-    animation: hover 1.6s forwards infinite ease-in-out;
+    width: 6vh;
+    /* animation: hover 1.6s forwards infinite ease-in-out; */
 }
 
 #icosa1 {
@@ -347,7 +348,7 @@ nav {
     left: 28%;
     top: 20%;
     width: 4vh;
-    animation: hover 1.2s forwards infinite ease-in-out;
+    /* animation: hover 1.2s forwards infinite ease-in-out; */
     z-index: -1;
 }
 
@@ -357,33 +358,33 @@ nav {
     top: 69%;
     width: 3vh;
     /* transform: rotateZ(-5deg); */
-    animation: hover 1.3s forwards infinite ease-in-out;
+    /* animation: hover 1.3s forwards infinite ease-in-out; */
     z-index: -1;
 }
 
 #icosa3 {
     position: absolute;
-    left: 66%;
+    left: 63%;
     top: 42%;
     width: 3.3vh;
     /* transform: rotateZ(5deg); */
-    animation: hover 1.4s forwards infinite ease-in-out;
+    /* animation: hover 1.4s forwards infinite ease-in-out; */
 }
 
 #linkedin-svg {
     position: absolute;
     left: 55%;
-    top:57%;
-    width: 8vh;
-    animation: hover 1.7s forwards infinite ease-in-out;
+    top:59%;
+    width: 7vh;
+    /* animation: hover 1.7s forwards infinite ease-in-out; */
 }
 
 #spotify-svg {
     position: absolute;
     left: 72%;
     top: 25%;
-    width: 4.5vh;
-    animation: hover 1.3s forwards infinite ease-in-out;
+    width: 4vh;
+    /* animation: hover 1.3s forwards infinite ease-in-out; */
 }
 
 .portal-parent {
@@ -391,25 +392,16 @@ nav {
     position: absolute;
     bottom: 0;
     left: 50%;
-    width: 100%;
+    width: 90%;
     z-index: -99;
 }
 
 .triangle-portal {
-    /* -webkit-backface-visibility: hidden; */
-    /* backface-visibility: hidden; */
-    /* display: block; */
-    /* -webkit-transform: rotateY(80deg); */
-    /* transform: rotateX(80deg); */
-    /* -webkit-animation: spin 2s forwards infinite linear; */
-    animation: spin 7s forwards infinite linear;
-    /* -webkit-transform-origin: center 62%; */
+    /* animation: spin 7s forwards infinite linear; */
     transform-origin: center 64%;
-    /* -webkit-transform-box: fill-box; */
     transform-box: fill-box;
     stroke-width: 10px;
     stroke: var(--Palette5);
-    width: 100%;
 }
 
 @keyframes perspective {
@@ -423,7 +415,6 @@ nav {
 
 @keyframes spin {
     to {
-        /* -webkit-transform: rotateX(85deg) rotateZ(360deg); */
         transform: rotateZ(360deg);
     }
 }
@@ -454,7 +445,7 @@ nav {
     font-style: italic;
     font-size: 1.4rem;
     line-height: 1.9rem;
-    margin: 1.5rem;
+    margin: 0 1.5rem 1.5rem 1.5rem;
 }
 
 .about-text2, 
