--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ nav {
     text-align: center;
     line-height: 1.5;
     min-height: 100vh;
-    border-bottom: 1px dashed var(--Palette1);
+    /* border-bottom: 1px dashed var(--Palette1); */
 }
 
 .intro-text {
@@ -200,7 +200,7 @@ nav {
     justify-content: center;
     align-items: center;
     font-family: open sans, sans-serif;
-    border-bottom: 1px dashed var(--Palette2);
+    /* border-bottom: 1px dashed var(--Palette2); */
     color: white;
     padding-top: 10vh;
 }
@@ -277,8 +277,8 @@ nav {
 }
 
 .about-section {
-    border-top: 1px dashed var(--Palette3);
-    border-bottom: 1px dashed var(--Palette3);
+    /* border-top: 1px dashed var(--Palette3); */
+    /* border-bottom: 1px dashed var(--Palette3); */
     color: var(--Palette3);
     min-height: 90vh;
 }
@@ -340,10 +340,9 @@ nav {
 
 #github-svg {
     position: absolute;
-    left: 17%;
+    left: 19%;
     top: 40%;
     width: 6vh;
-    /* animation: hover 1.6s forwards infinite ease-in-out; */
 }
 
 #icosa1 {
@@ -351,7 +350,6 @@ nav {
     left: 28%;
     top: 20%;
     width: 4vh;
-    /* animation: hover 1.2s forwards infinite ease-in-out; */
     z-index: -1;
 }
 
@@ -360,8 +358,6 @@ nav {
     left: 33%;
     top: 69%;
     width: 3vh;
-    /* transform: rotateZ(-5deg); */
-    /* animation: hover 1.3s forwards infinite ease-in-out; */
     z-index: -1;
 }
 
@@ -370,8 +366,6 @@ nav {
     left: 63%;
     top: 42%;
     width: 3.3vh;
-    /* transform: rotateZ(5deg); */
-    /* animation: hover 1.4s forwards infinite ease-in-out; */
 }
 
 #linkedin-svg {
@@ -379,15 +373,13 @@ nav {
     left: 55%;
     top:59%;
     width: 7vh;
-    /* animation: hover 1.7s forwards infinite ease-in-out; */
 }
 
 #spotify-svg {
     position: absolute;
-    left: 72%;
+    left: 70%;
     top: 25%;
     width: 4vh;
-    /* animation: hover 1.3s forwards infinite ease-in-out; */
 }
 
 .portal-parent {
@@ -398,13 +390,12 @@ nav {
 }
 
 .triangle-portal {
-    /* animation: spin 7s forwards infinite linear; */
     transform-box: fill-box;
     transform-origin: center;
     stroke-width: 5px;
     stroke: var(--Palette5);
     animation: color-fill 14s ease-in-out forwards infinite;
-    fill-opacity: 0.3;
+    fill-opacity: 0.25;
 }
 
 @keyframes color-fill {
