--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 
 html {
     line-height: 1.4;
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -17,6 +18,7 @@ html {
     --Palette4: #AE1E4E;
     --Palette5: #e9b171;
     --Palette6: #011638;
+    /* font-size: 28px; */
 }
 
 body {
@@ -179,6 +181,10 @@ nav {
     padding: .5rem;
     font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     font-weight: 350;
+}
+
+section {
+    margin-bottom: 20vh;
 }
 
 .section-title {
@@ -405,16 +411,16 @@ nav {
     }
 }
 
-.socials-svg {
+.about-socials {
     fill: var(--Palette5);
     /* animation: hover 1.3s forwards infinite ease-in-out; */
 }
 
-.socials-svg.stop-hover {
+.about-socials.stop-hover {
     fill: coral;
 }
 
-.socials-svg:hover {
+.about-socials:hover {
     fill: var(--Palette4);
 }
 
@@ -427,6 +433,7 @@ nav {
     max-width: 400px;
     animation: color-stroke-wheel 14s forwards infinite;
     width: 50%;
+    fill: white;
 }
 
 @keyframes color-stroke-wheel {
@@ -465,34 +472,132 @@ nav {
     color: var(--Palette5);
 }
 
-footer {
-    padding-top: 10vh;
+.contact-section .section-title {
     color: var(--Palette4);
 }
 
-footer a {
-    text-decoration: none;
-    color: inherit;
+.email-block {
+    margin: 0 auto;
+    text-align: left;
 }
 
 .email-address {
-    font-size: 2rem;
-    letter-spacing: 3px;
-    padding-left: 10px;
+    font-size: 2.5rem;
     font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     text-transform: uppercase;
     font-weight: 350;
+    margin-left: 10px;
+    transition: all .5s ease-in-out;
+    color: white;
+    text-decoration: none;
+}
+
+.email-address:hover ~ .email-domain,
+.email-domain:hover {
+    border-bottom: 1px solid var(--Palette3);
+}
+
+.email-domain {
     line-height: .5;
+    border-bottom: 1px solid var(--Palette4);
 }
 
-.gmail {
-    letter-spacing: 3px;
-    color: var(--Palette1);
-    margin-left: 30px;
-}
-
-.contact-section .section-title {
+.contact-section h1,
+footer h5 {
+    text-align: center;
     font-weight: 300;
-    font-size: 1.5rem;
-    font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+}
+
+footer {
+    color: var(--Palette4);
+    padding: 50px 0 20px 0;
+    border-top: 1px solid var(--Palette4);
+    position: relative;
+}
+
+#backtotop-icosa {
+    width: 30px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    background-color: var(--PaletteGrey);
+}
+
+#backtotop-frame {
+    stroke: var(--Palette4);
+    stroke-width: 20px;
+}
+
+#backtotop-arrow {
+    stroke: white;
+    stroke-width: 20px;
+    animation: double-bounce 3s ease-in forwards infinite;
+}
+
+#backtotop-icosa:hover > #backtotop-arrow {
+    animation: bounce .5s ease forwards infinite;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0%);
+    }
+    50% {
+        transform: translateY(-14%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+@keyframes double-bounce {
+    0% {
+        transform: translateY(0%);
+    }
+    50% {
+        transform: translateY(0%);
+    }
+    62.5% {
+        transform: translateY(-14%);
+    }
+    75% {
+        transform: translateY(0%);
+    }
+    87.5% {
+        transform: translateY(-14%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+.socials-block {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
+footer h5 {
+    font-size: 14px;
+    color: white;
+    font-weight: 300;
+}
+
+.footer-socials {
+    fill: var(--Palette4);
+    width: 2rem;
+    margin: 0 5px;
+    transition: all .25s ease-in-out;
+}
+
+.footer-socials:hover {
+    fill: white;
+    margin: 0 10px;
+}
+
+#copyright {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 12px;
 }
