--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,16 +477,14 @@ section {
 }
 
 .email-block {
-    margin: 0 auto;
-    text-align: left;
+    text-align: center;
 }
 
 .email-address {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     text-transform: uppercase;
     font-weight: 350;
-    margin-left: 10px;
     transition: all .5s ease-in-out;
     color: white;
     text-decoration: none;
