--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,7 @@ section {
     top: 0;
     left: 0;
     bottom: 0;
-    right: 0;
+    right: -25%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
