--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 50px;
     width: 45px;
     transition: all 1s cubic-bezier(1,.02,0,.96);
     cursor: pointer;
@@ -145,7 +145,7 @@ nav {
     height: 100vh;
     width: 100vw;
     background: black;
-    top: 50px;
+    top: 0;
     left: 0;
     transform: translateX(100vw);
 }
@@ -403,7 +403,7 @@ section {
 
 .email-block {
     text-align: center;
-    min-height: 13vh;
+    min-height: 20vh;
     overflow: hidden;
 }
 
@@ -537,7 +537,7 @@ footer h5 {
 
 @media screen and (min-width:  768px) {
     html {
-        font-size: 18px;
+        font-size: 20px;
     }
 }
 
@@ -572,11 +572,9 @@ footer h5 {
     
     .menu-btn {
         position: fixed;
-        top: 5%;
-        right: 2.5%;
         margin-right: initial;
-        display: initial;
-        height: 100%;
+        top: 3vh;
+        right: 2vw;
         width: 45px;
         transition: all 1s cubic-bezier(1,.02,0,.96);
         cursor: pointer;
@@ -585,7 +583,7 @@ footer h5 {
 
 @media screen and (min-width:  1200px) {
     html {
-        font-size: 20px;
+        font-size: 24px;
     }
 
     .main-wrap {
