--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,10 +219,8 @@ nav {
     fill: var(--PaletteGrey);
 }
 
-#cta-btn-text {
+.cta-text-path {
     fill: white;
-    font-family: iconsolata, monospace;
-    font-size: 36px;
 }
 
 #cta-btn:hover > #cta-btn-polygon {
@@ -239,9 +237,10 @@ nav {
     align-items: center;
     text-align: center;
     line-height: 1.5;
-    min-height: 95vh;
+    height: 100vh;
     position: relative;
     /* border-bottom: 1px dashed var(--Palette1); */
+    background-color: var(--Palette6);
 }
 
 .intro-text {
@@ -260,11 +259,15 @@ nav {
 }
 
 #down-arrow {
-    width: 20%;
+    width: 16%;
     max-width: 100px;
     position: absolute;
     left: 8vw;
     bottom: 0;
+}
+
+#down-arrow path {
+    fill: var(--Palette4);
 }
 
 /*  */
