fix arrow dropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 
 /* width */
 ::-webkit-scrollbar {
-    width: 7px;
+    width: 10px;
 }
 
 /* Track */
@@ -31,6 +31,7 @@
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: linear-gradient(var(--Palette1) 0%, var(--Palette2) 33%, var(--Palette3) 66%, var(--Palette4) 100%);
+    transition: all .5s ease-out;
     /* border-radius: 10px; */
 }
 
@@ -215,11 +216,12 @@ nav {
 #cta-btn-polygon {
     stroke: var(--Palette4);
     stroke-width: 7;
-    transition: all .3s ease-out;
+    transition: all .5s ease-out;
     fill: var(--PaletteGrey);
 }
 
 .cta-text-path {
+    transition: all .5s ease-out;
     fill: white;
 }
 
@@ -227,8 +229,8 @@ nav {
     stroke: white;
     fill: var(--PaletteGrey);
 }
-#cta-btn:hover > #cta-btn-text {
-    fill: white;
+#cta-btn:hover > .cta-text-path {
+    fill: var(--Palette4);
 }
 
 .jumbotron {
@@ -237,10 +239,7 @@ nav {
     align-items: center;
     text-align: center;
     line-height: 1.5;
-    height: 80vh;
-    /* position: relative; */
-    /* border-bottom: 1px dashed var(--Palette1); */
-    /* background-color: var(--Palette6); */
+    height: 100vh;
 }
 
 .intro-text {
@@ -264,6 +263,7 @@ nav {
     position: absolute;
     left: 8vw;
     bottom: 4vh;
+    animation: double-bounce 4s infinite ease-in;
 }
 
 #down-arrow path {
@@ -433,10 +433,8 @@ nav {
 }
 
 .about-section {
-    /* border-top: 1px dashed var(--Palette3); */
-    /* border-bottom: 1px dashed var(--Palette3); */
     color: var(--Palette3);
-    margin-bottom: 35vh;
+    padding-top: 10vh;
 }
 
 /*  */
